# protobuf_test

./: .gitattributes  CMakeLists.txt  README.md  cmakelists.txt  gen_interfaces.bat  matrix.proto
protobuf/VS2017/Debug/: gmock.lib  gmock_main.lib  libprotobuf-lited.lib  libprotobufd.lib  libprotocd.lib  lite-arena-test.ilk  lite-test.ilk  protoc.ilk  test_plugin.ilk
protobuf/VS2017/Release/: gmock.lib  gmock_main.lib  libprotobuf-lite.lib  libprotobuf.lib  libprotoc.lib
sources/: deserializer.cpp  serializer.cpp
